Update api scheme, add formatted field name to precompute